Pixman renderer is slow with transformed textures
Run WLR_RENDERER=pixman build/examples/rotation -r 90
. This results in frames taking > 1 second to render on my recent machine.
The special path for transformed textures seems to be very slow: https://gitlab.freedesktop.org/wlroots/wlroots/-/blob/b1b34cd6653d51f3bf8e331e6ae7b39290ae820e/render/pixman/pass.c#L75